# lte_simulator

./: .gitignore  CMakeLists.txt  test.txt
Src/: CMakeLists.txt  base_station.cpp  base_station.h  channel.cpp  channel.h  channel_manager.cpp  channel_manager.h  channel_mananger.h  fast_alg.hpp  map.cpp  map.h  node.cpp  node.h  params.h  path.cpp  path.h  phy.cpp  phy.h  sysconfig.cpp  sysconfig.h  tf_channel.cpp  tf_channel.h  tf_channel_manager.cpp  tf_channel_manager.h  user_equipment.cpp  user_equipment.h  zak_channel.cpp  zak_channel.h  zak_channel_manager.cpp  zak_channel_manager.h
Test/: CMakeLists.txt  test_correlation  test_correlation.cpp  test_deployment  test_deployment.cpp  test_large_scale  test_large_scale.cpp  test_small_scale  test_small_scale.cpp  test_tf_coefficients  test_tf_coefficients.cpp  test_zak  test_zak.cpp
conf/: tf_example.conf  tf_static_example.conf  zak_example.conf  zak_static_example.conf
tex/: static_dense_fig.tex
